--- a/components/confirm-seed.html
+++ b/components/confirm-seed.html
@@ -83,6 +83,17 @@
       padding: 0 40px;
     }
 
+    input {
+      border: 1px #6f00f6 solid;
+      border-radius: 8px;
+      padding: 0.67em;
+      color: white;
+      font-size: 1em;
+      text-align: left;
+      background-color: none;
+      margin: .5em;
+    }
+
     p {
       font-size: .8em;
     }
@@ -159,25 +170,25 @@
               </td>
             </tr>
             <tr>
-               <td class="seed-number">10:</td>
-               <td>
-                 <input class="seed-word" id="word10"></input>
-               </td>
-               <td class="seed-number">11:</td>
-               <td>
-                 <input class="seed-word" id="word11"></input>
-               </td>
-               <td class="seed-number">12:</td>
-               <td>
-                 <input class="seed-word" id="word12"></input>
-               </td>
+              <td class="seed-number">10:</td>
+              <td>
+                <input class="seed-word" id="word10"></input>
+              </td>
+              <td class="seed-number">11:</td>
+              <td>
+                <input class="seed-word" id="word11"></input>
+              </td>
+              <td class="seed-number">12:</td>
+              <td>
+                <input class="seed-word" id="word12"></input>
+              </td>
             </tr>
           </tbody>
         </table>
       </div>
       <div>
-         <span id="confirm-button" onclick="confirmSeed()">Recover Key</span>
-         <span id="close-button" onclick="closeWindow()">Close</span>
+        <span id="confirm-button" onclick="confirmSeed()">Recover Key</span>
+        <span id="close-button" onclick="closeWindow()">Close</span>
       </div>
     </div>
   </div>
