Update recover key window

--- a/components/generate-keys.html
+++ b/components/generate-keys.html
@@ -175,7 +175,7 @@
           <input id="password" type="password" placeholder="Password" onkeyup="onPasswordKeyUp()" autofocus>
           <input id="password-confirm" type="password" placeholder="Confirm Password" onkeyup="onPasswordKeyUp()">
           <div class="buttons">
-            <span id="recover-button" onclick="recoverKeys()">Restore Key</span>
+            <span id="recover-button" onclick="recoverKeys()">Recover Key</span>
             <span id="close-button" onclick="closeWindow()">Cancel</span>
             <span id="generate-button" onclick="generateKeys()">Next</span>
           </div>
