--- a/components/confirm-seed.html
+++ b/components/confirm-seed.html
@@ -19,7 +19,9 @@
 
     .form-area {
       display: flex;
+      flex-direction: row;
       justify-content: space-around;
+      margin-bottom: 20px;
     }
 
     form {
@@ -36,18 +38,7 @@
       background-color: none;
     }
 
-    input.seed {
-      width: 1em;
-      color: white;
-      font-size: 1em;
-      text-align: left;
-      background-color: none;
-    }
-
     #close-button {
-      position: absolute;
-      bottom: 20px;
-      right: 180px;
       background-color: #dd003f;
       color: white;
       padding: 10px 20px;
@@ -58,9 +49,6 @@
     }
 
     #confirm-button {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
       background-color: #6F00F6;
       color: white;
       padding: 10px 20px;
@@ -68,6 +56,16 @@
       font-size: 1em;
       margin-top: 1em;
       cursor: pointer;
+    }
+
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 220px;
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
     }
 
     .container {
@@ -83,7 +81,7 @@
       padding: 0 40px;
     }
 
-    input {
+    input.seed {
       border: 1px #6f00f6 solid;
       border-radius: 8px;
       padding: 0.67em;
@@ -106,6 +104,17 @@
     #twelve-words {
       visibility: visible;
     }
+
+    #word-container {
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -webkit-align-items: center;
+      align-items: center;
+      -webkit-align-content: center;
+      align-content: center;
+    }
   </style>
   <title>Create</title>
 
@@ -113,82 +122,60 @@
 
 <body>
   <div class="container">
-    <div class="input-area">
+    <div class="form-area">
       <div>
         <input id="password" class="password" type="password" placeholder="Password">
       </div>
+      <div class="buttons">
+        <span id="close-button" onclick="closeWindow()">Close</span>
+        <span id="confirm-button" onclick="confirmSeed()">Confirm</span>
+       </div>
     </div>
     <div>
       <h2>Confirm Recovery Phrase</h2>
       <div class="warning">
-        <p>Please enter the 12 word recovery phrase provided to you upon key generation to recover you key.
+        <p>Please re-enter the 12 word recovery phrase provided to you upon key generation.
         </p>
       </div>
       <div id="twelve-words">
-        <table>
-          <tbody>
-            <tr>
-              <td class="seed-number">1:</td>
-              <td>
-                <input class="seed-word" id="word1"></input>
-              </td>
-              <td class="seed-number">2:</td>
-              <td>
-                <input class="seed-word" id="word2"></input>
-              </td>
-              <td class="seed-number">3:</td>
-              <td>
-                <input class="seed-word" id="word3"></input>
-              </td>
-            </tr>
-            <tr>
-              <td class="seed-number">4:</td>
-              <td>
-                <input class="seed-word" id="word4"></input>
-              </td>
-              <td class="seed-number">5:</td>
-              <td>
-                <input class="seed-word" id="word5"></input>
-              </td>
-              <td class="seed-number">6:</td>
-              <td>
-                <input class="seed-word" id="word6"></input>
-              </td>
-            </tr>
-            <tr>
-              <td class="seed-number">7:</td>
-              <td>
-                <input class="seed-word" id="word7"></input>
-              </td>
-              <td class="seed-number">8:</td>
-              <td>
-                <input class="seed-word" id="word8"></input>
-              </td>
-              <td class="seed-number">9:</td>
-              <td>
-                <input class="seed-word" id="word9"></input>
-              </td>
-            </tr>
-            <tr>
-              <td class="seed-number">10:</td>
-              <td>
-                <input class="seed-word" id="word10"></input>
-              </td>
-              <td class="seed-number">11:</td>
-              <td>
-                <input class="seed-word" id="word11"></input>
-              </td>
-              <td class="seed-number">12:</td>
-              <td>
-                <input class="seed-word" id="word12"></input>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div>
-        <span id="confirm-button" onclick="confirmSeed()">Recover Key</span>
-        <span id="close-button" onclick="closeWindow()">Close</span>
+        <div id="word-container">
+          <div>
+            <input class="seed" id="word1" type="text" placeholder="Word 1" class="non-match">
+          </div>
+          <div>
+            <input class="seed" id="word2" type="text" placeholder="Word 2" class="word-match">
+          </div>
+          <div>
+            <input class="seed" id="word3" type="text" placeholder="Word 3">
+          </div>
+          <div>
+            <input class="seed" id="word4" type="text" placeholder="Word 4">
+          </div>
+          <div>
+            <input class="seed" id="word5" type="text" placeholder="Word 5">
+          </div>
+          <div>
+            <input class="seed" id="word6" type="text" placeholder="Word 6">
+          </div>
+          <div>
+            <input class="seed" id="word7" type="text" placeholder="Word 7">
+          </div>
+          <div>
+            <input class="seed" id="word8" type="text" placeholder="Word 8">
+          </div>
+          <div>
+            <input class="seed" id="word9" type="text" placeholder="Word 9">
+          </div>
+          <div>
+            <input class="seed" id="word10" type="text" placeholder="Word 10">
+          </div>
+          <div>
+            <input class="seed" id="word11" type="text" placeholder="Word 11">
+          </div>
+          <div>
+            <input class="seed" id="word12" type="text" placeholder="Word 12">
+          </div>
+        </div>
       </div>
     </div>
   </div>
